tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ca-central-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-4f5fbc20",
                    "NetworkAclId": "acl-fae4e192",
                    "SubnetId": "subnet-d9cd86b1"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-4e5fbc21",
                    "NetworkAclId": "acl-fae4e192",
                    "SubnetId": "subnet-98bd5dc7"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-705fbc1f",
                    "NetworkAclId": "acl-fae4e192",
                    "SubnetId": "subnet-e1187f9b"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-fae4e192",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-0e1e3b66"
        }
    ]
}
