tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ca-central-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-e591a18d",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-53a9943b",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "VpcId": "vpc-0e1e3b66"
        }
    ]
}
